--- a/static/css/index.css
+++ b/static/css/index.css
@@ -77,6 +77,11 @@ a {
     text-decoration: none;
 }
 
+button {
+    background: none;
+    border: none;
+}
+
 main {
     position: relative;
     top: 20vw;
@@ -115,8 +120,8 @@ footer {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    padding: .3em;
-    background-color: var(--secondary-color);
+    padding: .2em;
+    background-color: #1b982c;
     border-radius: 50%;
     font-size: 2em;
     color: var(--bg-light);
@@ -275,6 +280,11 @@ nav .navCloseBtn {
     color: var(--third-color);
 }
 
+.shopping-cart{
+    width: 1.2em;
+    color: var(--third-color);
+}
+
 .count-products {
     position: absolute;
     top: -12px;
@@ -295,6 +305,36 @@ nav .navCloseBtn {
     font-size: .5em;
 }
 
+.cart {
+    height: 100vh;
+    padding-top: 3em;
+
+    width: 0vw;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    right: 0;
+
+    background-color: var(--bg-light);
+    overflow-y: auto;
+    transition: 0.5s;
+}
+
+.close-button {
+    position: absolute;
+    top: 1.2em;
+    left: 1em;
+
+    font-size: .8em;
+    cursor: pointer;
+
+    color: var(--bg-dark);
+}
+
+.close-button:hover {
+    color: var(--third-color);
+}
+
 /************************** Lista de Productos - Carrito ********************************/
 .icon-close {
     font-size: .7em;
@@ -308,38 +348,55 @@ nav .navCloseBtn {
     cursor: pointer;
 }
 
-.container-cart-products {
-    width: 95vw;
-    max-height: 50vh;
-
-    position: absolute;
-    top: 10vw;
-    right: -.3em;
-    z-index: 1;
-
-    background-color: var(--bg-light);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: .5em;
-}
-
 .carrito-items {
-    max-height: 9em;
+    max-height: 74vh;
     overflow-y: scroll;
 }
 
 .cart-product {
     display: flex;
+    flex-direction: column;
     align-items: baseline;
     justify-content: space-between;
     padding: .5em;
-
-    border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+    position: relative;
 }
 
 .info-cart-product {
     display: flex;
     justify-content: space-between;
-    flex: 1;
+    align-items: center;
+}
+
+.img-producto {
+    width: 3em;
+}
+
+.info-cant-product {
+    width: 100%;
+    padding-left: 2em;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btns {
+    margin-left: 1em;
+    background-color: white;
+    border: 1px solid rgb(173, 173, 173);
+    border-radius: .5em;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.less-cantidad,
+.more-cantidad {
+    width: 3em;
+    padding: .5em 0;
+
+    text-align: center;
+    font-size: .6em;
+    color: var(--bg-dark);
 }
 
 .titulo-producto-carrito {
@@ -348,9 +405,8 @@ nav .navCloseBtn {
 }
 
 .precio-producto-carrito {
-    font-weight: 700;
     font-size: .7em;
-    margin-left: 10px;
+    margin-right: .5em;
 }
 
 .cantidad-producto-carrito {
@@ -359,13 +415,13 @@ nav .navCloseBtn {
 }
 
 .icon-remove {
+    position: absolute;
+    right: 1em;
     background: none;
     border: none;
     font-size: .7em;
     font-weight: 500;
-    color: var(--bg-dark);
-    margin-left: 1em;
-    margin-top: .5em;
+    color: var(--third-color);
 }
 
 .icon-remove:hover {
@@ -374,13 +430,19 @@ nav .navCloseBtn {
 }
 
 .carrito-total {
+    position: absolute;
+
+    width: 100%;
+    margin-top: 1em;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: .5em 0;
-    margin: .5em 0;
-    gap: .5em;
+    z-index: 6;
+
+    box-shadow: 0px -6px 9px 0px rgba(0, 0, 0, 0.2);
 }
 
 .carrito-precio-total {
@@ -402,10 +464,10 @@ nav .navCloseBtn {
 .btn-continuar-compra {
     width: 60%;
     padding: .6em 0;
+    margin-top: .5em;
 
     text-align: center;
-    text-transform: uppercase;
-    font-size: .8em;
+    font-size: .7em;
     font-weight: bolder;
 
     background-color: var(--secondary-color);
@@ -628,7 +690,6 @@ nav .navCloseBtn {
 }
 
 /* Etiquetas para seleccionar el contenido */
-
 .tab-btn {
     width: 100%;
     height: 4em;
@@ -672,7 +733,7 @@ nav .navCloseBtn {
 }
 /* Tarjetas de cada elemento */
 .producto-tab {
-    height: 20em;
+    height: 18em;
     padding: .5em;
 
     display: flex;
@@ -716,16 +777,17 @@ nav .navCloseBtn {
 
     margin-top: 1em;
 }
+
 .boton-item {
-    width: 60%;
+    width: 100%;
     padding: .6em 0;
 
     text-align: center;
-    text-transform: uppercase;
     font-size: .8em;
     font-weight: bolder;
 
     background-color: var(--secondary-color);
+    font-family: var(--secondary-font);
     color: var(--bg-dark);
     border: none;
     border-radius: .5em;
@@ -756,28 +818,6 @@ nav .navCloseBtn {
 .boton-item:hover {
     background-color: var(--third-color);
     color: var(--bg-light);
-}
-
-.restar-cantidad,
-.sumar-cantidad {
-    width: 20%;
-    padding: .5em 0;
-
-    text-align: center;
-    font-weight: bold;
-    color: var(--bg-dark);
-
-    border: 1px solid rgb(173, 173, 173);
-    border-radius: .5em;
-
-    transition: all 0.3s ease;
-}
-
-.restar-cantidad:hover,
-.sumar-cantidad:hover {
-    background-color: var(--third-color);
-    color: var(--bg-light);
-    border: none;
 }
 
 /************************** FOOTER ********************************/
