--- a/templates/tienda.html
+++ b/templates/tienda.html
@@ -82,7 +82,7 @@
         <section class="main-products">
             <div class="main-header">
                 <div class="main-links">
-                    <a href="../index.html">Inicio /</a><a href="#"> Tienda Online</a>
+                    <a href="../index.html">Inicio /</a><a href="#"> Tienda</a>
                 </div>
                 <!-- Filtros -->
                 <button id="abrirFiltros" class="btn-filtros">Filtros <i class="fa-solid fa-bars"></i></button>
