--- a/static/css/comprar.css
+++ b/static/css/comprar.css
@@ -30,6 +30,11 @@ Descripcion: este archivo CSS contiene los estilos para el index.htmll
     --third-font: "Outfit", sans-serif;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /* Scrollbar */
 ::-webkit-scrollbar {
@@ -77,6 +82,9 @@ a {
     text-decoration: none;
 }
 
+.hidden {
+    display: none;
+}
 /********************************** NAVBAR *************************/
 nav {
     width: 100vw;
@@ -345,6 +353,7 @@ nav .navCloseBtn {
 /********************************** FORM COMPRA *************************/
 #form-compra {
     margin: 5em 0;
+    margin-bottom: 1em;
 }
 
 .titulo-form-compra {
@@ -376,18 +385,18 @@ form {
     text-align: center;
 
     cursor: pointer;
-    opacity: .6;
 }
 
 .compra-timeline .compra-timeline-item.disabled {
     pointer-events: none;
+    opacity: .6;
 }
 
 .compra-timeline .compra-timeline-item .compra-timeline-item-icon {
     width: 1.7em;
     height: 1.7em;
     border-radius: 100%;
-    background-color: var(--secondary-color);
+    border: 1px solid var(--bg-dark);
     color: var(--bg-dark);
 }
 
@@ -412,7 +421,7 @@ form {
 
 .step {
     width: 90vw;
-    margin: 1em auto;
+    margin: 1.5em auto;
     padding: 1em 1.5em;
 
     text-align: center;
@@ -425,16 +434,20 @@ form {
     display: block;
 }
 
+.step-content{
+    margin: .5em 0;
+}
+
 .input-datos-personales {
     width: 100%;
     height: 3em;
 
     padding: .8em;
 
-    border: 1px solid var(--third-color);
+    border: 1px solid #7e7e7e48;
     border-radius: .5em;
 
-    margin: 1em 0;
+    margin: .5em 0;
 }
 
 .input {
@@ -446,7 +459,7 @@ form {
     top: 2em;
     right: .8em;
 
-    font-size: .8em;
+    font-size: .7em;
     text-decoration: underline;
 
     cursor: pointer;
@@ -467,7 +480,97 @@ form {
     font-size: 1em;
 }
 
+.btn-cp{
+    border: none;
 
+    color: var(--bg-dark);
+    font-family: var(--third-font);
+    text-decoration: underline;
+    text-align: right;
+
+    cursor: pointer;
+}
+
+#input-cp {
+    height: 20vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: self-start;
+}
+
+.datos-postal {
+    display: flex;
+    gap: 1em;
+    
+    margin-top: 1.2em;
+
+    font-size: .8em;
+    font-weight: bold;
+}
+
+.datos-postal i {
+    font-size: 2em;
+    margin-top: -.5em;
+
+    color: var(--third-color);
+}
+
+.facturacion {
+    position: relative;
+}
+.datos-facturacion {
+    margin-bottom: 1.5em;
+}
+.datos-facturacion #datos-facturacion{
+    cursor: pointer;
+    width: 1em;
+    height: 1em;
+    position: absolute;
+    top: 8em;
+    left: 2em;
+    border: 2px solid #888;
+}
+.datos-facturacion label[for="checkbox"]{
+    position: absolute;
+    top: 8.3em;
+    left: 4em;
+    font-size: .8em;
+    text-align: justify;
+}
+
+.datos-abono {
+    margin-top: 3em;
+}
+.datos-abono > h5 {
+    text-align: left;
+}
+
+.provincias{
+    display: flex;
+    justify-content: space-around;
+
+    font-size: .85em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #7e7e7e;
+    border: 1px solid #7e7e7e48;
+    border-radius: .5em;
+
+    width: 100%;
+    height: 3em;
+
+    margin: .5em 0;
+    padding: .8em;
+}
+
+.provincias select{
+    border: none;
+    margin-top: -.15em;
+    margin-left: .3em;
+}
+
+.provincias select:focus{
+    border: none;
+}
 /************************** FOOTER ********************************/
 .container {
     width: 100vw;
