--- a/templates/comprar.html
+++ b/templates/comprar.html
@@ -87,7 +87,7 @@
                     </li>
                     <li class="compra-timeline-line"></li>
                     <li>
-                        <button class="compra-timeline-item disabled" aria-disabled="true" tabindex="-1">
+                        <button class="compra-timeline-item" aria-disabled="true" tabindex="-1">
                             <div class="compra-timeline-item-icon">
                                 <i class="fa-regular fa-credit-card"></i>
                             </div>
@@ -111,8 +111,93 @@
                             <a href="https://www.correoargentino.com.ar/formularios/cpa" target="_blank">Encontrá tu
                                 CP</a>
                         </span>
-                        <button class="btn-form">Continuar</button>
+                        <input type="button" class="btn-form" value="Continuar" onclick="codigoPostal();" />
                     </div>
+                </div>
+                <div class="step hidden" id="step">
+                    <h2>Datos del Destinatario</h2>
+                    <div class="step-content">
+                        <input type="text" name="nombre" class="input-datos-personales" placeholder="Nombre" required />
+                        <input type="text" name="apellido" class="input-datos-personales" placeholder="Apellido"
+                            required />
+                        <input type="text" name="contacto" class="input-datos-personales" placeholder="Teléfono"
+                            required />
+                        <div class="input-datos-personales" id="input-cp"></div>
+                        <input type="text" name="calle" class="input-datos-personales" placeholder="Calle" required />
+                        <input type="text" name="num-calle" class="input-datos-personales" placeholder="Número"
+                            required />
+                        <input type="text" name="dpto" class="input-datos-personales"
+                            placeholder="Departamento (opcional)" />
+                        <input type="text" name="barrio" class="input-datos-personales"
+                            placeholder="Barrio (opcional)" />
+                        <input type="text" name="ciudad" class="input-datos-personales" placeholder="Ciudad" required />
+                    </div>
+                </div>
+                <div class="step hidden facturacion" id="step">
+                    <h2>Datos de Facturacion</h2>
+                    <div class="step-content">
+                        <input type="text" name="dni-cuil" class="input-datos-personales" placeholder="DNI o CUIL"
+                            required />
+                        <div class="datos-facturacion">
+                            <input type="checkbox" name="checkbox" id="datos-facturacion" checked>
+                            <label for="checkbox">Mis datos de facturación y entrega son<br>los mismos</label>
+                        </div>
+                    </div>
+                    <div class="step-content hidden datos-abono">
+                        <h5>Persona que pagará el pedido</h5>
+                        <input type="text" name="nombre-abono" class="input-datos-personales" placeholder="Nombre"
+                            required />
+                        <input type="text" name="apellido-abono" class="input-datos-personales" placeholder="Apellido"
+                            required />
+                        <input type="text" name="telefono-abono" class="input-datos-personales" placeholder="Telefono"
+                            required />
+                        <input type="text" name="calle-abono" class="input-datos-personales" placeholder="Calle"
+                            required />
+                        <input type="text" name="num-calle-abono" class="input-datos-personales" placeholder="Número"
+                            required />
+                        <input type="text" name="dpto-abono" class="input-datos-personales"
+                            placeholder="Departamento (opcional)" />
+                        <input type="text" name="barrio-abono" class="input-datos-personales"
+                            placeholder="Barrio (opcional)" />
+                        <div class="step-content input">
+                            <input class="input-datos-personales" id="cp-abono" type="number"
+                                placeholder="Código postal" required />
+                            <span class="link-cp">
+                                <a href="https://www.correoargentino.com.ar/formularios/cpa" target="_blank">Encontrá tu
+                                    CP</a>
+                            </span>
+                        </div>
+                        <div class="provincias">
+                            <label for="provincia">Provincia</label>
+                            <select name="provincia" id="">
+                                <option value="caba">Ciudad Autónoma de Buenos Aires</option>
+                                <option value="bsas">Buenos Aires</option>
+                                <option value="catamarca">Catamarca</option>
+                                <option value="Chaco">Chaco</option>
+                                <option value="Chubut">Chubut</option>
+                                <option value="Córdoba">Córdoba</option>
+                                <option value="Corrientes">Corrientes</option>
+                                <option value="Entre Ríos">Entre Ríos</option>
+                                <option value="Formosa">Formosa</option>
+                                <option value="Jujuy">Jujuy</option>
+                                <option value="La Pampa">La Pampa</option>
+                                <option value="La Rioja">La Rioja</option>
+                                <option value="Mendoza">Mendoza</option>
+                                <option value="Misiones">Misiones</option>
+                                <option value="Neuquen">Neuquen</option>
+                                <option value="Río Negro">Río Negro</option>
+                                <option value="Salta">Salta</option>
+                                <option value="San Juan">San Juan</option>
+                                <option value="San Luís">San Luís</option>
+                                <option value="Santa Cruz">Santa Cruz</option>
+                                <option value="Santiago del Estero">Santiago del Estero</option>
+                                <option value="Tierra del Fuego">Tierra del Fuego</option>
+                                <option value="Tucumán">Tucumán</option>
+                            </select>
+                        </div>
+                    </div>
+                    <input type="button" class="btn-form" value="Continuar con el Pago" onclick="refresh();" />
+                </div>
             </form>
         </section>
     </main>
